--- a/index.css
+++ b/index.css
@@ -1,3 +1,16 @@
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+}
+
 /* Header */
 #header {
     display: flex;
@@ -6,6 +19,45 @@
     left: auto;
     right: 20px;
     top: 20px;
+}
+
+#header #header-links {
+    margin-right: 20px;
+    line-height: 40px;
+}
+
+#header-links a {
+    color: black;
+    font-size: 14px;
+    padding-left: 15px;
+}
+
+#app-btn {
+    display: flex;
+}
+
+#app {
+    margin-top: 10px;
+}
+
+#header .material-icons {
+    width: 40px;
+    height: 40px;
+    color: #5f6368;
+}
+
+#header button {
+    color: #fff;
+    background: -webkit-linear-gradient(top,#4387fd,#4683ea);
+    border: 1px solid transparent;
+    font-weight: 500;
+    font-size: 14px;
+    max-height: 36px;
+    max-width: 96px;
+    padding: 9px 23px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 10px;
 }
 
 /* Middle of the page */
@@ -30,6 +82,12 @@
     margin-bottom: 25px;
 }
 
+#mid-section #search-box:hover {
+    box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
+    border-color: rgba(223,225,229,0);
+    color: #fff;
+}
+
 #search-box #search {
     height: 44px;
     width: 487px;
@@ -48,7 +106,7 @@
 #mid-section #buttons {
     display: flex;
     justify-content: center;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
 }
 
 #mid-section .google-buttons {
@@ -59,8 +117,15 @@
     border-radius: 4px;
 }
 
+#mid-section .google-buttons:hover {
+    box-shadow: 1px 1px rgb(0 0 0 / 10%);
+}
+
 .google-buttons:first-child {
     margin-right: 10px;
+    background:  #f8f9fa;
+    border: 1px solid #dadce0;
+    color: #202124;
 } 
 
 
@@ -70,8 +135,17 @@
     justify-content: center;
 }
 
+#offer {
+    font-size: small;
+    color: #222;
+}
+
 #offer a {
-    padding: 0;
+    margin-left: 5px;
+    margin-right: 5px;
+    color: #1a0dab;
+    padding: 0 3px;
+    font-size: small;
 }
 
 /* Footer */
@@ -79,11 +153,21 @@
     position: absolute;
     bottom: 0;
     display: flex;
-    width: 98vw;
+    width: 100%;
     justify-content: space-between;
-
+    color: #222;
+    background: #f2f2f2;
 }
 
 #left ul, #right ul {
     display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0 20px;
+}
+
+#left ul a, #right ul a {
+    padding: 15px;
+    font-size: 14px;
+    color: #70757a;
 }
